# algo_ds

./: .gitignore  CMakeLists.txt  Makefile  README.md  setenv  setenv.fish
algorithms/sorting/insertion_sort/: README.md
algorithms/sorting/insertion_sort/inc/: insertion_sort.h
algorithms/sorting/insertion_sort/src/: insertion_sort.cpp  main.out
algorithms/sorting/insertion_sort/test/: test_insertion_sort.cpp
algorithms/sorting/merge_sort/: README.md
algorithms/sorting/merge_sort/inc/: merge_sort.h
algorithms/sorting/merge_sort/src/: merge_sort.cpp
algorithms/sorting/merge_sort/test/: test_merge_sort.cpp
